fix navbar causing overflow in x axis

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -3,9 +3,9 @@
 .nav {
   visibility: hidden;
   position: absolute;
-  top: 100%;
-  left: calc(var(--space-1) * -1);
-  width: 100vw;
+  top: clamp(4rem, 15vw, 6rem);
+  left: 0;
+  width: 100%;
   background-color: #fff;
   text-align: center;
   transform: scaleY(0);
