--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
 
   &__shopping-cart {
     width: clamp(1.5rem, 5.2vw, 2.25rem);
